Fix overflow colors

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,7 +16,6 @@ body {
   height: 100%;
   background-color: #eefaf9;
   font-family: 'Bitter', serif;
-  overflow: hidden;
 }
 body {
   line-height: 1.5;
@@ -57,11 +56,13 @@ h6 {
 }
 
 header {
+  position: fixed;
   height: 10vh;
   width: 100%;
   background-color: #a8dadc;
   border-bottom: 1px solid #333;
   box-shadow: 0 0 1vw #333;
+  z-index: 10;
 }
 
 .logo {
@@ -87,6 +88,8 @@ h1 {
 }
 
 nav {
+  position: fixed;
+  top: 10vh;
   height: 100%;
   width: 20vw;
   background-color: #80a6bf;
@@ -113,18 +116,19 @@ nav {
 }
 
 main {
+  position: relative;
   width: 100%;
-  height: 100%;
-  left: 20vw;
+  margin-left: 20vw;
+  top: 10vh;
   background-color: #a0b8c7;
 }
 
 .trip-view {
-  height: 90%;
   width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  background-color: #a0b8c7;
 }
 
 .trip-card {
